--- a/views/adminRegister.hbs
+++ b/views/adminRegister.hbs
@@ -49,6 +49,10 @@
         {{#if message}}
             <h4 class="alert alert-danger mt-4">{{message}}</h4>
         {{/if}}
+        {{#if messageSuccess}}
+            <h4 class="alert alert-success mt-4">{{messageSuccess}}</h4>
+        {{/if}}
+
     </div>
 
 
