--- a/views/adminList.hbs
+++ b/views/adminList.hbs
@@ -11,27 +11,19 @@
     <nav>
         <h4>Auction Management System</h4>
         <ul>
-            <li class="adminDashName">Welcome {{user.name}}</li>
-            <li><a href="/auth/admin/logout">Logout</a></li>
             <li><a href="/">Home</a></li>
+            <li><a href="/adminDash">Dashboard</a></li>
         </ul>
     </nav>
 
-    <div class="container mt-4">
-
-        <div class="row">
-            <div class="col-4">
-                <a href="" class="mybtn">Register Seller</a>
-            </div>
-            <div class="col-4">
-                <a href=""  class="mybtn">Register Buyer</a>
-            </div>
-            <div class="col-4">
-                <a href="/admin/all" class="mybtn">Show All Admins</a>
-            </div>
-        </div>
+    <div class="container">
+        <ul class="list-group admin_list">
+            <li class="list-group-item admin_list_head">List of All the Admins</li>
+            {{#each admins}}
+            <li class="list-group-item admin_list_item">{{this.name}}</li>
+            {{/each}}
+        </ul>
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 </body>
