--- a/views/adminRegister.hbs
+++ b/views/adminRegister.hbs
@@ -12,6 +12,7 @@
         <h4>Auction Management System</h4>
         <ul>
             <li><a href="/">Home</a></li>
+            <li><a href="/admin">Login</a></li>
         </ul>
     </nav>
 
