--- a/views/userLogin.hbs
+++ b/views/userLogin.hbs
@@ -11,25 +11,32 @@
     <nav>
         <h4>Auction Management System</h4>
         <ul>
-            <li class="adminDashName">Welcome {{user.name}}</li>
-            <li><a href="/auth/admin/logout">Logout</a></li>
             <li><a href="/">Home</a></li>
         </ul>
     </nav>
 
     <div class="container mt-4">
-
-        <div class="row">
-            <div class="col-4">
-                <a href="" class="mybtn">Register Seller</a>
-            </div>
-            <div class="col-4">
-                <a href=""  class="mybtn">Register Buyer</a>
-            </div>
-            <div class="col-4">
-                <a href="/admin/all" class="mybtn">Show All Admins</a>
-            </div>
+        <div class="card">
+        <div class="card-header">
+            Login Form
         </div>
+        <div class="card-body">
+            <form action="/auth/user/login" method="POST">
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" name="email"> 
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" name="password">
+                </div>       
+                <button type="submit" class="btn btn-primary">Login</button>
+            </form>
+        </div>
+        </div>
+        {{#if message}}
+            <h4 class="alert alert-danger mt-4">{{message}}</h4>
+        {{/if}}
     </div>
 
 
