Supplier Registration completed

--- a/views/adminDash.hbs
+++ b/views/adminDash.hbs
@@ -21,10 +21,10 @@
 
         <div class="row">
             <div class="col-4">
-                <a href="" class="mybtn">Register Seller</a>
+                <a href="/supplierRegister" class="mybtn">Register Supplier</a>
             </div>
             <div class="col-4">
-                <a href=""  class="mybtn">Register Buyer</a>
+                <a href="auth/user/buyer/register"  class="mybtn">Register Buyer</a>
             </div>
             <div class="col-4">
                 <a href="/admin/all" class="mybtn">Show All Admins</a>
