Buyer Registration completed

--- a/views/adminDash.hbs
+++ b/views/adminDash.hbs
@@ -24,7 +24,7 @@
                 <a href="/supplierRegister" class="mybtn">Register Supplier</a>
             </div>
             <div class="col-4">
-                <a href="auth/user/buyer/register"  class="mybtn">Register Buyer</a>
+                <a href="/buyerRegister"  class="mybtn">Register Buyer</a>
             </div>
             <div class="col-4">
                 <a href="/admin/all" class="mybtn">Show All Admins</a>
