--- a/views/buyerRegister.hbs
+++ b/views/buyerRegister.hbs
@@ -19,10 +19,10 @@
     <div class="container mt-4">
         <div class="card">
         <div class="card-header">
-            Register Supplier
+            Register Buyer
         </div>
         <div class="card-body">
-            <form action="/auth/user/supplier/register" method="POST">
+            <form action="/auth/user/buyer/register" method="POST">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" class="form-control" id="name" name="name" required> 
