--- a/views/supplierRegister.hbs
+++ b/views/supplierRegister.hbs
@@ -37,7 +37,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
+                    <input type="password" class="form-control" id="password" name="password" required minlength="5">
                 </div>       
                 <div class="form-group">
                     <label for="passwordConfirm">Confirm Password</label>
