--- a/views/adminDash.hbs
+++ b/views/adminDash.hbs
@@ -11,7 +11,7 @@
     <nav>
         <h4>Auction Management System</h4>
         <ul>
-            <li class="adminDashName">Welcome {{user.name}}</li>
+            <li class="adminDashName">Welcome {{admin.name}}</li>
             <li><a href="/auth/admin/logout">Logout</a></li>
             <li><a href="/">Home</a></li>
         </ul>
