--- a/views/adminErr.hbs
+++ b/views/adminErr.hbs
@@ -15,14 +15,8 @@
         </ul>
     </nav>
 
-    <div class="container mt-4">
-        {{#if admin}}
-            <a href="/adminDash" class="mybtn">Admin</a>
-            <a href="/adminErr" class="mybtn">User</a>
-        {{else}}
-            <a href="/admin" class="mybtn">Admin</a>
-            <a href="/user/option" class="mybtn">User</a>
-        {{/if}}
+    <div class="container admin_err">
+        Please Login as a user
     </div>
 
 
