--- a/views/userOption.hbs
+++ b/views/userOption.hbs
@@ -15,14 +15,11 @@
         </ul>
     </nav>
 
-    <div class="container mt-4">
-        {{#if admin}}
-            <a href="/adminDash" class="mybtn">Admin</a>
-            <a href="/adminErr" class="mybtn">User</a>
-        {{else}}
-            <a href="/admin" class="mybtn">Admin</a>
-            <a href="/user/option" class="mybtn">User</a>
-        {{/if}}
+    <div class="container">
+        <div class="row">
+            <div class="col-6"><a href="" class="mybtn">Supplier</a></div>
+            <div class="col-6"><a href="" class="mybtn">Buyer</a></div>
+        </div>
     </div>
 
 
