Supplier login completed initial phase

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,7 +21,7 @@
             <a href="/adminErr" class="mybtn">User</a>
         {{else}}
             <a href="/admin" class="mybtn">Admin</a>
-            <a href="/user/option" class="mybtn">User</a>
+            <a href="/userOptions" class="mybtn">User</a>
         {{/if}}
     </div>
 
