--- a/views/supplierDash.hbs
+++ b/views/supplierDash.hbs
@@ -11,12 +11,15 @@
     <nav>
         <h4>Auction Management System</h4>
         <ul>
+            <li class="adminDashName">Welcome {{supplier.name}}</li>
             <li><a href="/">Home</a></li>
+            <li><a href="/auth/user/supplier/logout">Logout</a></li>
+            <li><a href="/userOptions">Back</a></li>
         </ul>
     </nav>
 
-    <div class="container admin_err">
-        Please Logout as an Admin
+    <div class="container mt-4">    
+        Hello
     </div>
 
 
