--- a/views/userOption.hbs
+++ b/views/userOption.hbs
@@ -17,8 +17,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-6"><a href="" class="mybtn">Supplier</a></div>
-            <div class="col-6"><a href="" class="mybtn">Buyer</a></div>
+            <div class="col-6"><a href="/supplierLogin" class="mybtn">Supplier</a></div>
+            <div class="col-6"><a href="/buyerLogin" class="mybtn">Buyer</a></div>
         </div>
     </div>
 
