API for adding a product by the supplier is created

--- a/views/supplierDash.hbs
+++ b/views/supplierDash.hbs
@@ -19,7 +19,17 @@
     </nav>
 
     <div class="container mt-4">    
-        Hello
+        <div class="row">
+            <div class="col-4">
+                <a href="/addProduct" class="mybtn">Add Product</a>
+            </div>
+            <div class="col-4">
+                <a href="" class="mybtn">Show All Products</a>
+            </div>
+            <div class="col-4">
+                <a href="" class="mybtn">Show All Suppliers</a>
+            </div>
+        </div>
     </div>
 
 
