--- a/views/buyerLogin.hbs
+++ b/views/buyerLogin.hbs
@@ -22,14 +22,14 @@
             Buyer Login Form
         </div>
         <div class="card-body">
-            <form action="" method="POST">
+            <form action="/auth/user/buyer/login" method="POST">
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email"> 
+                    <input type="email" class="form-control" id="email" name="email" required> 
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" name="password">
+                    <input type="password" class="form-control" id="password" name="password" required>
                 </div>       
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
