--- a/views/adminDash.hbs
+++ b/views/adminDash.hbs
@@ -30,6 +30,15 @@
                 <a href="/admin/all" class="mybtn">Show All Admins</a>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-6">
+                <a href="/selectProductList" class="mybtn">Show available Products</a>
+            </div>
+            <div class="col-6">
+                <a href="/soldProductList" class="mybtn">Show sold Products</a>
+            </div>
+        </div>
     </div>
 
 
