--- a/views/availableProducts.hbs
+++ b/views/availableProducts.hbs
@@ -11,17 +11,18 @@
     <nav>
         <h4>Auction Management System</h4>
         <ul>
-            <li class="adminDashName">Welcome {{buyer.name}}</li>
             <li><a href="/">Home</a></li>
-            <li><a href="/auth/user/buyer/logout">Logout</a></li>
-            <li><a href="/userOptions">Back</a></li>
+            <li><a href="/adminDash">Dashboard</a></li>
         </ul>
     </nav>
 
     <div class="container">
-        <div class="jumbotron">
-            Today's Product: 
-        </div>
+        <ul class="list-group admin_list">
+            <li class="list-group-item admin_list_head">Available Products</li>
+            {{#each products}}
+            <a href="#" class="list-group-item list-group-item-action list_item_selection">{{this.name}}</a>
+            {{/each}}
+        </ul>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
