--- a/views/index.hbs
+++ b/views/index.hbs
@@ -40,7 +40,9 @@
                 {{#if price}}
                     {{price}} Rs
                 {{/if}}
-                
+                <br>
+                <br>
+                <a class="btn btn-primary btn-lg product_btn" href="/productDetails">View Details...</a>
             </div>
         </div>
     </div>
