--- a/views/addProduct.hbs
+++ b/views/addProduct.hbs
@@ -31,6 +31,10 @@
                     <label for="basePrice">Base Price</label>
                     <input type="number" class="form-control" id="basePrice" name="basePrice" required> 
                 </div>
+                <div class="form-group">
+                    <label for="detail">Product Detail</label>
+                    <textarea name="detail" id="name" cols="40" rows="5" class="form-control"></textarea> 
+                </div>
                 <button type="submit" class="btn btn-primary">Add Product</button>
             </form>
         </div>
