--- a/views/productDetails.hbs
+++ b/views/productDetails.hbs
@@ -11,14 +11,22 @@
     <nav>
         <h4>Auction Management System</h4>
         <ul>
-            <li class="adminDashName">Welcome {{buyer.name}}</li>
             <li><a href="/">Home</a></li>
-            <li><a href="/auth/user/buyer/logout">Logout</a></li>
-            <li><a href="/userOptions">Back</a></li>
         </ul>
     </nav>
 
-    
+    <div class="container">
+        <div class="details_heading">
+            {{product.name}}
+        </div>
+        <div>
+            {{#if product.detail}}
+            <div class="product_details">
+                {{product.detail}}
+            </div>
+            {{/if}}
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 </body>
