--- a/views/availableProducts.hbs
+++ b/views/availableProducts.hbs
@@ -22,7 +22,9 @@
             {{#each products}}
             <a href="/product/{{@index}}" class="list-group-item list-group-item-action list_item_selection">{{this.name}}</a>
             {{/each}}
+            <a href="/removeProduct" class="mybtn" >Remove</a>
         </ul>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
