--- a/views/buyerDash.hbs
+++ b/views/buyerDash.hbs
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="row">
             <div class="col-6"><a href="/user/buyer/all" class="mybtn">Show all Buyers</a></div>
-            <div class="col-6"><a href="" class="mybtn">Place Bid</a></div>
+            <div class="col-6"><a href="/placeBid" class="mybtn">Place Bid</a></div>
         </div>
     </div>
 
