--- a/views/index.hbs
+++ b/views/index.hbs
@@ -41,6 +41,8 @@
                     {{price}} Rs
                 {{/if}}
                 <br>
+                Bidding Time: 10:00AM
+                <br>
                 <br>
                 <a class="btn btn-primary btn-lg product_btn" href="/productDetails">View Details...</a>
             </div>
