--- a/views/adminDash.hbs
+++ b/views/adminDash.hbs
@@ -39,6 +39,12 @@
                 <a href="/soldProductList" class="mybtn">Show sold Products</a>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-6"><a href="/admin/status" class="mybtn">Bidding Status</a></div>
+            <div class="col-3"></div>
+        </div>
     </div>
 
 
